# python3-core-api-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.run/: Template Python tests.run.xml
debian/: changelog  control  python3-core-api-client.pydist  rules
requirements/: dev.txt  test.txt
src/cyberfusion/CoreApiClient/: connector.py  http.py  models.py
tests/: conftest.py
tests/feature_tests/: test_connector.py
tests/feature_tests/resources/: test_available_versions.py  test_basic_authentication_realms.py  test_borg_archives.py  test_borg_repositories.py  test_certificate_managers.py  test_certificates.py  test_clusters.py  test_cmses.py  test_crons.py  test_custom_config_snippets.py  test_custom_configs.py  test_customers.py  test_daemons.py  test_database_user_grants.py  test_database_users.py  test_databases.py  test_domain_routers.py  test_firewall_groups.py  test_firewall_rules.py  test_fpm_pools.py  test_ftp_users.py  test_haproxy_listens.py  test_haproxy_listens_to_nodes.py  test_health.py  test_hosts_entries.py  test_htpasswd_files.py  test_htpasswd_users.py  test_login.py  test_logs.py  test_mail_accounts.py  test_mail_aliases.py  test_mail_domains.py  test_mail_hostnames.py  test_malwares.py  test_mariadb_encryption_keys.py  test_n8n_instances.py  test_node_add_ons.py  test_nodes.py  test_passenger_apps.py  test_redis_instances.py  (+11 more)
tests/unit_tests/: test_connector.py  test_encoders.py  test_exceptions.py  test_http.py  test_interfaces.py  test_models.py
(+51 files in other folders)
