[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-core-api-client"
version = "6.0.1"
description = "Python client for Core API."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "certifi==2026.2.25",
    "requests==2.33.0",
    "pydantic[email]==2.12.5",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-core-api-client"
